fix: changed three colors of theme-neon to make it more readable both with dark mode and without; added css to two pages

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -105,16 +105,16 @@
 
   .theme-neon {
     /* general branding colors */
-    --color-primary: /* #1bdb9b */ 27 219 155;
+    --color-primary: 0 109 106;
     --color-secondary: /* #524c4c */ 82 76 76;
-    --color-tertiary: 179 255 23;
+    --color-tertiary: 255 51 119;
     --color-primary-inverted: /* #ffffff */ 255 255 255;
     --color-primary-hover: /* #1abb85 */ 26 187 133;
     --color-secondary-inverted: /* #ffffff */ 255 255 255;
     --color-secondary-hover: /* #d66051 */ 214 96 81;
     /* element specific colors */
     --color-text-base: /* #88eecc */ 136 238 204;
-    --color-text-muted: /* #71c5a9 */ 113 197 169;
+    --color-text-muted: 54 132 106;
     --color-text-inverted: /* #252525 */ 37 37 37;
     --color-bg-primary: /* #383434 */ 56 52 52;
     --color-bg-secondary: /* #524c4c */ 82 76 76;
